--- a/time/app.json
+++ b/time/app.json
@@ -1,5 +1,29 @@
 {
   "pages":[
-    "pages/schedule/schedule"   
-  ]
+    "pages/schedule/schedule",   
+    "pages/scheduleInfo/scheduleInfo"
+  ],
+  "window": {
+    "navigationBarBackgroundColor": "#ffffff",
+    "navigationBarTextStyle": "black",
+    "navigationBarTitleText": "小程序",
+    "backgroundColor": "#eeeeee",
+    "backgroundTextStyle": "light",
+    "enablePullDownRefresh": false
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/schedule/schedule",
+      "text": "日程",
+      "iconPath": "iconPath",
+      "selectedIconPath": "selectedIconPath"
+    },
+    {
+      "pagePath": "pages/schedule/schedule",
+      "text": "我",
+      "iconPath": "iconPath",
+      "selectedIconPath": "selectedIconPath"
+    }
+    ]
+  }
 }
