--- a/time/app.json
+++ b/time/app.json
@@ -1,7 +1,8 @@
 {
   "pages":[
     "pages/note/note",   
-    "pages/noteInfo/noteInfo"
+    "pages/noteInfo/noteInfo",
+    "pages/noteAdd/noteAdd"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
@@ -19,8 +20,8 @@
       "selectedIconPath": "imgs/note@select.png"
     },
     {
-      "pagePath": "pages/note/note",
-      "text": "工作组",
+      "pagePath": "pages/noteAdd/noteAdd",
+      "text": "新增",
       "iconPath": "imgs/note.png",
       "selectedIconPath": "imgs/note@select.png"
     },
