--- a/time/app.json
+++ b/time/app.json
@@ -11,7 +11,7 @@
     "navigationBarTitleText": "",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
-    "enablePullDownRefresh": false
+    "enablePullDownRefresh": true
   },
   "tabBar": {
     "selectedColor": "#1296db",
